data/derived/comb/progs/unify/prog3004.ml.out
Characters 81-94:
  | false -> (n mod 10) :: (digitsOfInt n - 10);;
                            ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
